2007-08-30  Badlop  <badlop@ono.com>

	* src/mod_webpresence.erl: Support for JavaScript output. Request for image of an unavailable resource results in an unavailable type of image.

2007-08-29  Badlop  <badlop@ono.com>

	* src/mod_webpresence.erl: Set jsf-jabber-text as default icon theme in the registration form. Fixed bug in data forms (thanks to NoAlWin).

	* README.txt: Improved example PHP script (thanks to NoAlWin).

	* data/pixmaps/*: Added many Icon Themes from Elmer NxG (thanks to Zbyszek Zolkiewski).

2007-08-28  Badlop  <badlop@ono.com>

	* AUTHORS: Added Badlop as main author, and mention Igor Goryachev as author of mod_presence.
	* README.txt: Same.
	* src/mod_webpresence.erl: Same.

	* LICENSE: Deleted, since all modules are by default published with the GPL license for compatibility with ejabberd.

	* src/mod_webpresence.erl: Added registration and theme statistics. Improved statistics: icon theme, and percentages. Added support for Text output. Changed order of options.
	

2007-08-27  Badlop  <badlop@ono.com>

	* README.txt: Updated description of configurable options.
	
	* src/mod_webpresence.erl: Enforce Hash and JID options in a web request. The Hash is now a pseudo random integer. Added support for avatar output. Added support to show image of a specific resource. Improved Form, Message and Web. Added module options Port and Path. Improved message with instructions. Replaced the misleading term 'Hash' with 'Random ID'. Only show the JID in XML output if JabberID is used in the URI. If user does not select at least an ID and Output, he is unregistered. Added Unregistration message. Remove registration is Jabber account is deleted.

2007-08-26  Badlop  <badlop@ono.com>

	* src/mod_webpresence.erl: Improved table format and conversion from old mod_presence. Small fixes. Replace nested cases with call to funcions.
